# CAREFirst

./: .gitignore  README.md  build-push.sh  load.js  run.sh
carefirst/: Dockerfile  README.md  build-push.sh  env.template  pyproject.toml  pyproject_LAB4.toml  run.sh  run_cloud.sh  run_local.sh
carefirst/.k8s/base/: deployment-lab4.yaml  kustomization.yaml  namespace.yaml  service-redis.yaml
carefirst/.k8s/bases/: deployment-conversational.yaml  deployment-lab4.yaml  kustomization.yaml  service-conversational.yaml
carefirst/.k8s/overlays/dev/: kustomization.yaml  namespace.yaml  patch-deployment-conversational.yaml  patch-deployment-lab4.yaml
carefirst/.k8s/overlays/prod/: kustomization.yaml  patch-deployment-conversational.yaml  patch-deployment-conversational_copy.yaml  patch-deployment-lab4.yaml  patch-deployment-lab4_copy.yaml  virtual-service.yaml
carefirst/data/config/: emergency_topics.co  prompts.yml
carefirst/data/evaluation/: gpt3-5_responses.pickle  model_evaluation_baseline.csv  model_evaluation_gemma_7b_it.csv  model_evaluation_gpt35.csv  model_evaluation_mistal_7b_instruct.csv
carefirst/data/guidelines/: ifrc_guidelines.pickle  redcross_chapter_titles.pickle  redcross_guideline_metadata.pickle  redcross_guideline_metadata_v2.pickle  redcross_guidelines.pickle  redcross_w_metadata_v3.pickle  redcross_w_metadata_v4.pickle
carefirst/data/guidelines/transformed_redcross_w_metadata.pifaiss_index/: index.faiss  index.pkl
carefirst/data/intent/: redcross_qna.pickle  redcross_testing.pickle  redcross_testing_post_translate.csv  redcross_testing_pre_translate.csv  redcross_validation.pickle  redcross_validation_10_percent.pickle
carefirst/experiments/01_exploratory_data_analysis/: 01_data_prep.py  04_youtube_videos.py  05_intents.py
carefirst/experiments/02_demos/: 01_retrieval.py  02_llm.py  03_audio.py
carefirst/experiments/03_evaluation/: Untitled.ipynb  Untitled1.ipynb  intents_data.py  model_eval.py  model_eval_copy.py  model_evaluation.py
carefirst/infra/: deployment-pythonapi.yaml  deployment-redis.yaml  namespace.yaml  service-redis.yaml
carefirst/src/: chatgpt.py  chatgpt_test.py  dataload.py  db.py  db_mongo.py  filename.pickle  guardrails.py  llm.py  llm_js.py  main.py  memory_database_test.py  qdrantcloud.py  refinement.py  retrieval.py  retrieval_slim.py  spam.py  summarization.py  testing.py  transform.py
carefirst/tests/: test.py
carefirst_OLD/: Dockerfile  pyproject.toml  run_rmarin.sh
infra/: deployment-frontend.yaml  deployment-redis.yaml  (+6 more)
(+55 files in other folders)
