[tool.poetry]
name = "carefirst"
version = "0.1.0"
description = ""
authors = ["Bronte Pendergast <bronpend@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
langchain = "^0.1.4"
pandas = "^2.2.0"
pypdf = "^4.0.1"
sentence-transformers = "^2.3.1"
faiss-cpu = "^1.7.4"
openai = "0.27.8"
doctran = "^0.0.14"
gradio = "3.14.0"


[tool.poetry.group.dev.dependencies]
nltk = "^3.8.1"
spacy = "^3.7.2"
gensim = "^4.3.2"
wordcloud = "^1.9.3"
matplotlib-venn = "^0.11.10"
matplotlib-venn-wordcloud = "^0.2.6"
huggingface-hub = "^0.20.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
